<resources>
    <string name="app_name">AllCinema</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Intro</string>
    <string name="second_fragment_label">Select cinema</string>
    <string name="fragment_third_label">Select zone</string>
    <string name="fragment_eight_label">Select complement</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selecci_n_de_productos">Selección de productos</string>
    <string name="siguiente">siguiente</string>
    <string name="selecci_n_de_m_todos_de_pago">Selección de métodos de pago</string>
    <string name="datos_de_entrega">Datos de entrega</string>
    <string name="error_en_pedido">Error en pedido</string>
    <string name="pedido_realizado">pedido realizado</string>
    <string name="comprar_entradas">Comprar entradas</string>
    <string name="encuentra_entradas_para_tus_peliculas_favoritas">Encuentra entradas para tus peliculas favoritas</string>
    <string name="todo">TODO</string>
    <string name="seleccione_el_cine">Seleccione el cine</string>
    <string name="seleccione_la_zona_de_su_asiento">Seleccione la zona de su asiento</string>
    <string name="cinesur">Cinesur</string>
    <string name="union_cines">Union Cines</string>
    <string name="yelmo_cines">Yelmo Cines</string>
    <string name="mk2_cinesur">mk2 Cinesur</string>
    <string name="zona_standart">Zona standart</string>
    <string name="zona_economica">Zona economica</string>
    <string name="zona_vip">Zona vip</string>
    <string name="h">H</string>
    <string name="k">K</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_11">11</string>
    <string name="_10">10</string>
    <string name="j">J</string>
    <string name="i">I</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="seleccione_asiento_s">Seleccione asiento/s</string>
    <string name="nombre">Nombre</string>
    <string name="seguir">Seguir</string>
    <string name="naranja">Naranja</string>
    <string name="complementos">Añadir complementos</string>
    <string name="limon">Limón</string>
    <string name="cola">Cola</string>
    <string name="normal">Normal</string>
    <string name="zero">Zero</string>
    <string name="light">Light</string>
    <string name="de_tipo">De tipo:</string>
    <string name="refresco">Refresco</string>
    <string name="mantequilla">Mantequilla</string>
    <string name="sal">Sal</string>
    <string name="caramelo">Caramelo</string>
    <string name="palomitas">Palomitas</string>
    <string name="elegir_asiento">Elegir asiento</string>
    <string name="de_sabor">De sabor:</string>
    <string name="volver_al_inicio">Volver al inicio</string>
    <string name="info">Info</string>
    <string name="logo">logo</string>
    <string name="ejerccio_practico_de_navegaci_n_de_fragment">Ejerccio practico de navegación de fragment</string>
    <string name="volver">Volver</string>
    <string name="share_button">share button</string>
</resources>