<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="266dp"
        android:layout_height="59dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="29dp"
        android:text="@string/encuentra_entradas_para_tus_peliculas_favoritas"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="170dp"
        android:layout_height="94dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="78dp"
        android:text="@string/comprar_entradas"
        app:circularflow_defaultRadius="40dp"
        app:circularflow_radiusInDP="40dp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="229dp"
        android:layout_height="86dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="57dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo_cine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>